# fastapi_auth

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 88071a367aa7_create_table_account.py  9f53b377775a_created_accounts_table.py
src/: main.py
src/accounts/: cookies.py  dependencies.py  enums.py  jwt.py  models.py  permission.py  repositories.py  schemas.py  security.py  services.py
src/accounts/api/: v1.py
src/api/: deps.py  permissions.py
src/api/v1/: __init__.py  routers.py
src/api/v1/endpoints/: accounts.py  auth.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  initializer.py  logger.py  models.py  repositories.py  startup.py
src/crud/: user.py
src/dao/: base.py  user.py
src/dependencies/: auth_dep.py  dao_dep.py
src/migrations/: env.py
src/migrations/versions/: 69f1fb6a7888_the_account_table_added_created_at_and_.py  92cf435449d0_added_role_on_table_account.py  aaaab18ab2bd_created_new_table_account.py
src/models/: base.py  user.py
src/routers/: auth.py
src/schemas/: auth.py  token.py
src/services/: auth.py  token.py
src/shemas/: auth.py  token.py
src/utils/: cookie_helpers.py  datetime.py  jwt_helpers.py
