[project]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = [
    {name = "KenArsen",email = "kenzhegulov.kgz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

